--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: movity - GitHub
 email: mandi@movity.it
-description: >- # this means to ignore newlines until "baseurl:"
-  This website contains list of all the open source repositories on github by movity.
+description: This website contains list of all the open source repositories on github by movity.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://movityit.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 about_url: https://movity.it
